--- a/deployments.yaml
+++ b/deployments.yaml
@@ -2,27 +2,24 @@
 apiVersion: apps/v1
 kind: Deployment
 labels: 
-  app: petclinic
+ app: petclinic
 metadata:
-name: hello
+ name: hello
 spec:
-strategy: 
+ strategy: 
   type: Recreate
-template: 
+ template: 
   metadata: 
     labels: 
       app: petclinic
       tier: petclinic
-  spec: 
-    containers: 
-      - 
-        image: "gcr.io/test-baobab:tomcat:latest"
-        imagePullPolicy: Always
-        name: petclinic
-        ports: 
-          - 
-            containerPort: 8080
-            name: hello
+spec: 
+ containers: 
+ - name: petclinic
+   image: "gcr.io/test-baobab/tomcat:latest"
+   imagePullPolicy: Always
+   ports: 
+   - containerPort: 8080
 
 --- 
 apiVersion: v1
@@ -30,12 +27,12 @@ kind: Service
 labels: 
   app: petclinic
 metadata:
-name: hello
-ports: 
-  - 
-    port: 8080
+ name: hello
+spec:
+ ports: 
+  - port: 8080
     targetPort: 8080
-selector: 
+ selector: 
   app: petclinic
   tier: petclinic
 spec:
