--- a/deployments.yaml
+++ b/deployments.yaml
@@ -6,6 +6,9 @@ metadata:
  labels: 
   app: petclinic
 spec:
+ selector:
+  matchLabels:
+   app: petclinic
  strategy: 
   type: Recreate
  template: 
@@ -13,13 +16,13 @@ spec:
    labels: 
     app: petclinic
     tier: petclinic
-spec:
- containers:
- - name: petclinic
-   image: "gcr.io/test-baobab/tomcat:latest"
-   imagePullPolicy: Always
-   ports:
-   - containerPort: 8080
+  spec:
+   containers:
+   - name: petclinic
+     image: "gcr.io/test-baobab/tomcat:latest"
+     imagePullPolicy: Always
+     ports:
+     - containerPort: 8080
 --- 
 apiVersion: v1
 kind: Service
