--- a/deployments.yaml
+++ b/deployments.yaml
@@ -19,7 +19,7 @@ spec:
   spec:
    containers:
    - name: petclinic2
-     image: "gcr.io/test-baobab/tomcat:latest"
+     image: "gcr.io/test-baobab/tomcatapp:latest"
      imagePullPolicy: Always
      ports:
      - containerPort: 8080
