--- a/deployments.yaml
+++ b/deployments.yaml
@@ -31,13 +31,13 @@ metadata:
   labels:
     app: petclinic2
   name: petclinicappservice
-  spec: null
-  ports:
-    - port: 8080
-  targetPort: 8080
-  selector:
+spec:
+ ports:
+  - protocol: TCP 
+    port: 8080
+    targetPort: 8080
+ selector:
     app: petclinic
     tier: petclinic
-    spec: null
-    type: LoadBalancer
+ type: LoadBalancer
 
