--- a/deployments.yaml
+++ b/deployments.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: "gcr.io/test-baobab/petclinic:latest"
+        image: "gcr.io/test-baobab/petimage:latest"
         ports:
           - containerPort: 8080
         # ... other container configuration
@@ -47,18 +47,18 @@ spec:
 
           # Replace DB_PORT with the port the proxy should listen on
           # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
-          - "-instances=projetdevops-303216:europe-west1:petclinicdv=tcp:3306"
+          - "-instances=test-baobab:europe-west1:petclinicdb=tcp:3306"
 
         # [START cloud_sql_proxy_k8s_volume_mount]
           # This flag specifies where the service account key can be found
-          - "-credential_file=/home/boukhatem_projects/secrets/service_account.json"
+          - "-credential_file=/home/gerard_ajgf/jenkins-key.json"
         securityContext:
           # The default Cloud SQL proxy image runs as the
           # "nonroot" user and group (uid: 65532) by default.
           runAsNonRoot: true
         volumeMounts:
         - name: my-secrets-volume
-          mountPath: /home/boukhatem_projects/secrets
+          mountPath: /home/gerard_ajgf
           readOnly: true
           # [END cloud_sql_proxy_k8s_volume_mount]
       # [START cloud_sql_proxy_k8s_volume_secret]
